fixed spacing

--- a/gladiators/gladiatorcss.css
+++ b/gladiators/gladiatorcss.css
@@ -27,7 +27,7 @@ img {height: 15%;
         left: 40%;}
 
 .left2 {position: relative;
-        left: 47%;}
+        left: 49%;}
 
 .left3 {position: relative;
         left: 38%;
